--- a/extract_gbinfo.ipynb
+++ b/extract_gbinfo.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1bf6d5b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aaaa"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "2d2fc003",
    "metadata": {},
