add option to specify excel filename

--- a/extract_gbinfo.ipynb
+++ b/extract_gbinfo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2d2fc003",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "60818a40",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "80c97bc0",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "66dafb91",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b1222fe1",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "53b8b25d",
    "metadata": {},
    "outputs": [],
@@ -86,15 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "dffdcb69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_excel(wb,ws,name,test_data):\n",
+    "def make_excel(wb,ws,name,test_data,filename=\"gbenergy\"):\n",
     "    titles = [[\"angle\",\"my_model\",\"cnid_sampling\",\"gbindice\"]]\n",
     "    test_data = titles + test_data\n",
     "\n",
+    "    filename=filename\n",
+    "    \n",
     "    for i,v in enumerate(test_data):\n",
     "        ws.append(v)\n",
     "\n",
@@ -123,13 +125,13 @@
     "    chart.plot_area.spPr = GraphicalProperties(noFill = True)\n",
     "\n",
     "    ws.add_chart(chart)\n",
-    "    wb.save('gbenergy.xlsx')\n",
+    "    wb.save(f'{filename}.xlsx')\n",
     "\n",
     "    # 線の色を変更する\n",
     "    chart.ser[0].graphicalProperties.line.solidFill = \"FF0000\"\n",
     "    chart.ser[1].graphicalProperties.line.solidFill = \"00FF00\"\n",
     "    # chart.ser[2].graphicalProperties.line.solidFill = \"0000FF\"\n",
-    "    wb.save('gbenergy.xlsx')\n",
+    "    wb.save(f'{filename}.xlsx')\n",
     "\n",
     "    # 線種を変更する\n",
     "    # 設定可能な値：'lgDash', 'sysDash', 'dashDot', 'solid', 'sysDashDot',\n",
@@ -137,17 +139,17 @@
     "    chart.ser[0].graphicalProperties.line.dashStyle = 'solid'\n",
     "    chart.ser[1].graphicalProperties.line.dashStyle = 'solid'\n",
     "    # chart.ser[2].graphicalProperties.line.dashStyle = 'solid'\n",
-    "    wb.save('gbenergy.xlsx')\n",
+    "    wb.save(f'{filename}.xlsx')\n",
     "\n",
     "    # 線の太さを変更する\n",
     "    chart.ser[0].graphicalProperties.line.width = 10000\n",
     "    chart.ser[1].graphicalProperties.line.width = 10000\n",
     "    # chart.ser[2].graphicalProperties.line.width = 30000\n",
-    "    wb.save('gbenergy.xlsx')\n",
+    "    wb.save(f'{filename}.xlsx')\n",
     "\n",
     "    # 線を滑らかにする\n",
     "    chart.ser[0].smooth = False\n",
-    "    wb.save('gbenergy.xlsx')\n",
+    "    wb.save(f'{filename}.xlsx')\n",
     "\n",
     "    # マーカーを変更する\n",
     "    # 設定可能な値：'x', 'auto', 'picture', 'star', 'diamond', 'plus', 'dot',\n",
@@ -155,29 +157,29 @@
     "    chart.ser[0].marker.symbol = 'circle'\n",
     "    chart.ser[1].marker.symbol = 'diamond'\n",
     "    # chart.ser[2].marker.symbol = 'diamond'\n",
-    "    wb.save('gbenergy.xlsx')\n",
+    "    wb.save(f'{filename}.xlsx')\n",
     "\n",
     "    chart.ser[0].marker.size = 10\n",
     "    chart.ser[1].marker.size = 8\n",
     "    # chart.ser[2].marker.symbol = 'diamond'\n",
-    "    wb.save('gbenergy.xlsx')\n",
+    "    wb.save(f'{filename}.xlsx')\n",
     "\n",
     "    # マーカーの色を変更する\n",
     "    chart.ser[0].marker.graphicalProperties.line.solidFill = \"FF0000\"\n",
     "    chart.ser[1].marker.graphicalProperties.line.solidFill = \"00FF00\"\n",
     "    # chart.ser[2].marker.graphicalProperties.line.solidFill = \"0000FF\"\n",
-    "    wb.save('gbenergy.xlsx')\n",
+    "    wb.save(f'{filename}.xlsx')\n",
     "\n",
     "    # グラフの種類を変更する\n",
     "    # chart.grouping = 'stacked'  # 積み上げ折れ線グラフ\n",
     "    # chart.grouping = 'percentStacked'  # 100％積み上げ折れ線グラフ\n",
     "    chart.grouping = 'standard'  # 折れ線グラフ\n",
-    "    wb.save('gbenergy.xlsx')"
+    "    wb.save(f'{filename}.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a9f627c4",
    "metadata": {},
    "outputs": [],
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "28e4fe9c",
    "metadata": {},
    "outputs": [],
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "0410ccae",
    "metadata": {},
    "outputs": [],
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "089a96ce",
    "metadata": {},
    "outputs": [],
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e476de68",
    "metadata": {},
    "outputs": [],
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a52a2ab4",
    "metadata": {},
    "outputs": [],
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f417a441",
    "metadata": {},
    "outputs": [],
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "08b9dc88",
    "metadata": {},
    "outputs": [],
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "db9f9516",
    "metadata": {},
    "outputs": [],
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "fb8bd787",
    "metadata": {},
    "outputs": [],
@@ -445,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "c72c9ce5",
    "metadata": {},
    "outputs": [],
@@ -477,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "ace1dd05",
    "metadata": {},
    "outputs": [],
@@ -515,12 +517,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "99be3018",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_results_excel(results,results2):\n",
+    "def make_results_excel(results,results2,filename=\"gbenergy\"):\n",
     "    wb = Workbook()\n",
     "\n",
     "    for i,dirname in enumerate(glob.glob(f\"{results}/*\")):\n",
@@ -544,7 +546,7 @@
     "            gbindice_list = get_100_gbindice(dirname)\n",
     "            result_tot_gbindice = [result+[gbindice] for result,gbindice in zip(result_tot,gbindice_list)]\n",
     "    #         print(result_tot_gbindice)\n",
-    "            make_excel(wb,ws,name_dash,result_tot_gbindice)\n",
+    "            make_excel(wb,ws,name_dash,result_tot_gbindice,filename)\n",
     "    #         gbname = np.repeat(f\"{name}\",len(result_sorted))\n",
     "    #         result_sorted = np.hstack((result_sorted,gbname.reshape(-1,1)))\n",
     "        elif axis==\"110\":\n",
@@ -553,7 +555,7 @@
     "            result_tot = np.hstack([result_sorted,result_sorted_cnid[:,1].reshape(-1,1),]).tolist()\n",
     "            gbindice_list = get_110_gbindice(dirname)\n",
     "            result_tot_gbindice = [result+[gbindice] for result,gbindice in zip(result_tot,gbindice_list)]\n",
-    "            make_excel(wb,ws,name_dash,result_tot_gbindice)\n",
+    "            make_excel(wb,ws,name_dash,result_tot_gbindice,filename)\n",
     "\n",
     "    #         gbname = np.repeat(f\"{name}\",len(result_sorted))\n",
     "    #         result_sorted = np.hstack((result_sorted,gbname.reshape(-1,1)))\n",
@@ -563,7 +565,7 @@
     "            result_tot = np.hstack([result_sorted,result_sorted_cnid[:,1].reshape(-1,1),]).tolist()\n",
     "            gbindice_list = get_111_gbindice(dirname)\n",
     "            result_tot_gbindice = [result+[gbindice] for result,gbindice in zip(result_tot,gbindice_list)]\n",
-    "            make_excel(wb,ws,name_dash,result_tot_gbindice)\n",
+    "            make_excel(wb,ws,name_dash,result_tot_gbindice,filename)\n",
     "\n",
     "    #         gbname = np.repeat(f\"{name}\",len(result_sorted))\n",
     "    #         result_sorted = np.hstack((result_sorted,gbname.reshape(-1,1)))\n",
@@ -585,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "75baae02",
    "metadata": {},
    "outputs": [
@@ -615,7 +617,7 @@
     }
    ],
    "source": [
-    "make_results_excel(\"change_termination\",\"cnid\")"
+    "make_results_excel(\"change_termination\",\"cnid\",filename=\"new_gbenergy\")"
    ]
   },
   {
