--- a/extract_gbinfo.ipynb
+++ b/extract_gbinfo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2d2fc003",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "60818a40",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "80c97bc0",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "66dafb91",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b1222fe1",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "53b8b25d",
    "metadata": {},
    "outputs": [],
@@ -81,21 +81,24 @@
     "    system_energy = np.loadtxt(f\"{filename}\")[:,-1]\n",
     "    gbenergy = np.loadtxt(f\"{filename}\")[:,-2]\n",
     "    most_stable_gbenergy = gbenergy[system_energy.argmin()]\n",
-    "    return most_stable_gbenergy"
+    "    return most_stable_gbenergy/1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "id": "dffdcb69",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_excel(wb,ws,name,test_data,filename=\"gbenergy\"):\n",
-    "    titles = [[\"angle\",\"my_model\",\"cnid_sampling\",\"gbindice\"]]\n",
+    "    titles = [[\"angle\",\"Proposed method\",\"Previous method\",\"gbindice\"]]\n",
     "    test_data = titles + test_data\n",
-    "\n",
+    "    \n",
     "    filename=filename\n",
+    "    \n",
+    "    for i in test_data:\n",
+    "        i[1], i[2] = i[2], i[1]\n",
     "    \n",
     "    for i,v in enumerate(test_data):\n",
     "        ws.append(v)\n",
@@ -111,12 +114,12 @@
     "    chart.add_data(src, titles_from_data=True)\n",
     "    cat = Reference(ws, min_col=cmin, min_row=rmin+1, max_row=rmax)  # 項目名の設定\n",
     "    chart.set_categories(cat)\n",
-    "    chart.title = f\"({name})\"  # グラフタイトル\n",
+    "    chart.title = f\"{name}\"  # グラフタイトル\n",
     "    chart.x_axis.title = 'x'  # 軸ラベル\n",
     "    chart.y_axis.title = 'y'\n",
     "    chart.anchor = 'A8'  # グラフの表示位置\n",
     "    chart.width = 13  # グラフのサイズ\n",
-    "    chart.height = 8\n",
+    "    chart.height = 13\n",
     "\n",
     "\n",
     "    chart.layout = Layout(ManualLayout(x = 0.05, y = 0.05, h = 0.9, w = 0.9, xMode=\"edge\", yMode=\"edge\"))\n",
@@ -179,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "a9f627c4",
    "metadata": {},
    "outputs": [],
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "28e4fe9c",
    "metadata": {},
    "outputs": [],
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "0410ccae",
    "metadata": {},
    "outputs": [],
@@ -221,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "089a96ce",
    "metadata": {},
    "outputs": [],
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "e476de68",
    "metadata": {},
    "outputs": [],
@@ -279,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "a52a2ab4",
    "metadata": {},
    "outputs": [],
@@ -311,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "f417a441",
    "metadata": {},
    "outputs": [],
@@ -343,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "08b9dc88",
    "metadata": {},
    "outputs": [],
@@ -381,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "db9f9516",
    "metadata": {},
    "outputs": [],
@@ -419,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "fb8bd787",
    "metadata": {},
    "outputs": [],
@@ -447,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "c72c9ce5",
    "metadata": {},
    "outputs": [],
@@ -479,7 +482,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
+   "id": "fc3547bc",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Cu[100]'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\".join(list(\"Cu100\")[:2]) + \"[\" + \"\".join(list(\"Cu100\")[2:]) + \"]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "ace1dd05",
    "metadata": {},
    "outputs": [],
@@ -517,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "id": "99be3018",
    "metadata": {},
    "outputs": [],
@@ -528,8 +554,9 @@
     "    for i,dirname in enumerate(glob.glob(f\"{results}/*\")):\n",
     "        print(dirname)\n",
     "        name = dirname.split(\"/\")[-1]\n",
-    "        name_dash = name.split(\"_\")[0]\n",
-    "        axis = \"\".join(list(name_dash)[-3:])\n",
+    "        axis_name = name.split(\"_\")[0]\n",
+    "        name_dash = \"\".join(list(f\"{axis_name}\")[:2]) + \"[\" + \"\".join(list(f\"{axis_name}\")[2:]) + \"]\"\n",
+    "        axis = \"\".join(list(axis_name)[-3:])\n",
     "        print(name)\n",
     "        print(axis)\n",
     "        if i == 0:\n",
@@ -587,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "id": "75baae02",
    "metadata": {},
    "outputs": [
