--- a/extract_gbinfo.ipynb
+++ b/extract_gbinfo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "80c97bc0",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "66dafb91",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "b1222fe1",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "53b8b25d",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "dffdcb69",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "a9f627c4",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "28e4fe9c",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "0410ccae",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "089a96ce",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "e476de68",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "a52a2ab4",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "f417a441",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "08b9dc88",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "db9f9516",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "fb8bd787",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "c72c9ce5",
    "metadata": {},
    "outputs": [],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "ace1dd05",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "99be3018",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "55fcb90c",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "ff636b77",
    "metadata": {},
    "outputs": [],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "d640e56d",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "e7b4572d",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "293fe4b6",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "e39f577d",
    "metadata": {},
    "outputs": [],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "0bb52bca",
    "metadata": {},
    "outputs": [],
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "4731a295",
    "metadata": {},
    "outputs": [],
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "93e9d294",
    "metadata": {},
    "outputs": [],
@@ -772,7 +772,7 @@
     "        if axis==\"100\":\n",
     "            result_sorted = get_100_twist_gbenergy(dirname)\n",
     "            result_sorted_cnid = get_100_twist_gbenergy(f\"{results2}/{name}\")\n",
-    "            result_tot = np.hstack([result_sorted_cnid,result_sorted[:,1].reshape(-1,1),]).tolist()\n",
+    "            result_tot = np.hstack([result_sorted,result_sorted_cnid[:,1].reshape(-1,1),]).tolist()\n",
     "            gbindice_list = get_100_sigma()\n",
     "            result_tot_gbindice = [result+[gbindice] for result,gbindice in zip(result_tot,gbindice_list)]\n",
     "            make_excel(wb,ws,name_dash,result_tot_gbindice,filename)\n",
@@ -780,7 +780,7 @@
     "        elif axis==\"110\":\n",
     "            result_sorted = get_110_twist_gbenergy(dirname)\n",
     "            result_sorted_cnid = get_110_twist_gbenergy(f\"{results2}/{name}\")\n",
-    "            result_tot = np.hstack([result_sorted_cnid,result_sorted[:,1].reshape(-1,1),]).tolist()\n",
+    "            result_tot = np.hstack([result_sorted,result_sorted_cnid[:,1].reshape(-1,1),]).tolist()\n",
     "            gbindice_list = get_110_sigma()\n",
     "            result_tot_gbindice = [result+[gbindice] for result,gbindice in zip(result_tot,gbindice_list)]\n",
     "            make_excel(wb,ws,name_dash,result_tot_gbindice,filename)\n",
@@ -788,16 +788,15 @@
     "        else:\n",
     "            result_sorted = get_111_twist_gbenergy(dirname)\n",
     "            result_sorted_cnid = get_111_twist_gbenergy(f\"{results2}/{name}\")\n",
-    "            result_tot = np.hstack([result_sorted_cnid,result_sorted[:,1].reshape(-1,1),]).tolist()\n",
+    "            np.hstack([result_sorted,result_sorted_cnid[:,1].reshape(-1,1),]).tolist()\n",
     "            gbindice_list = get_111_sigma()\n",
     "            result_tot_gbindice = [result+[gbindice] for result,gbindice in zip(result_tot,gbindice_list)]\n",
-    "            make_excel(wb,ws,name_dash,result_tot_gbindice,filename)\n",
-    "            "
+    "            make_excel(wb,ws,name_dash,result_tot_gbindice,filename)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "0f008ffb",
    "metadata": {},
    "outputs": [
